[metadata]
name = frame2seq
version = 0.0.5
author = Deniz Akpinaroglu
author_email = dakpinaroglu@berkeley.edu
description = Frame2seq for protein sequence design
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dakpinaroglu/Frame2seq
project_urls =
    Bug Tracker = https://github.com/dakpinaroglu/Frame2seq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    torch>=2.1.1
    biopython>=1.82
    einops>=0.7.0
    pytorch-lightning>=2.1.3
    scipy>=1.11.4
    dm-tree>=0.1.8
    pandas>=2.1.4
include_package_data = True

[options.packages.find]
where = src